# EnglishBot

./: .gitignore  pyproject.toml
bot/: database.db  main.py  words.db
bot/commands/: __init__.py  commands_list.py  feedback.py  help.py  start.py  useraname.py
bot/database/: __init__.py  db.py  register.py  users.py  words.py
bot/database/words/: b2.txt  c1.txt  c2.txt
bot/education/: __init__.py  classes.py  learn.py  repeat.py  repeat_old.py  statistic.py  statistics.py
bot/education/word_dir/: a1.txt  a2.txt  b1.txt
bot/handlers/: __init__.py  register.py  repeat.py
bot/keyboards/: WordsLevel.py  __init__.py  answers.py  change_username.py  firstStart.py  repeat_kb.py  start.py  stat_kb.py
bot/middlewaries/: __init__.py  register_check.py
education/: classes.py
