[tool.poetry]
name = "englishbot"
version = "0.1.0"
description = ""
authors = ["tveekiss <egor.shiryaev@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
environs = "^11.0.0"
requests = "^2.31.0"
bs4 = "^0.0.2"
lxml = "^5.2.1"
sqlalchemy = "^2.0.29"
pytest = "^8.1.1"
emoji-translate = "^0.1.1"
regex = "^2024.4.16"
spacy = "^3.7.4"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
